--- a/templates/master.template.yaml
+++ b/templates/master.template.yaml
@@ -167,3 +167,10 @@ Resources:
           Fn::GetAtt:
           - VPCStack
           - Outputs.VPCCIDR
+Outputs:
+  WebURL:
+    Description: "The web server URL"
+    Value:
+      Fn::GetAtt:
+      - WorkloadStack
+      - Outputs.URL
