--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -13,7 +13,7 @@ tests:
     parameters:
       AvailabilityZones: "$[taskcat_getaz_2]"
       EmailAddress: guanminggege@gmail.com
-      KeyPairName:  "AWS::EC2::KeyPair::DevOps_2021.pem"
+      KeyPairName:  "qsworkshop20210813.pem"
       WebserverCIDR: "0.0.0.0/0"
       QSS3KeyPrefix: "qs-workshop/"
       QSS3BucketName: "$[taskcat_autobucket]"
