--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -12,8 +12,8 @@ tests:
     - us-east-1
     parameters:
       AvailabilityZones: "$[taskcat_getaz_2]"
-      EmailAddress: guanminggege@gmail.com
-      KeyPairName:  "qsworkshop20210813.pem"
+      EmailAddress: "guanminggege@gmail.com"
+      KeyPairName: "qsworkshop20210813"
       WebserverCIDR: "0.0.0.0/0"
       QSS3KeyPrefix: "qs-workshop/"
       QSS3BucketName: "$[taskcat_autobucket]"
