--- a/templates/master.template.yaml
+++ b/templates/master.template.yaml
@@ -113,7 +113,8 @@ Resources:
         PrivateSubnet2ACIDR: !Ref PrivateSubnet2CIDR
         PublicSubnet1CIDR: !Ref PublicSubnet1CIDR
         PublicSubnet2CIDR: !Ref PublicSubnet2CIDR
-        VPCCIDR: !Ref VPCCIDR  WorkloadStack:
+        VPCCIDR: !Ref VPCCIDR  
+  WorkloadStack:
     DependsOn: VPCStack
     Type: AWS::CloudFormation::Stack
     Properties:
