--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -11,6 +11,7 @@ tests:
     regions:
     - us-east-1
     parameters:
+      InstanceType: "t2.micro"
       AvailabilityZones: "$[taskcat_getaz_2]"
       EmailAddress: "guanminggege@gmail.com"
       KeyPairName: "qsworkshop20210813"
